# target9game

./: AutoWin.cpp  AutoWin.h  CMakeLists.txt  ClassesStack.cpp  ClassesStack.h  GameFunctions.cpp  GameFunctions.h  GameState.cpp  README.md  main.cpp
AutoWin/: AutoWin.cpp  GameStateStructure.cpp
ClassesStack/: ClassesStack.h
GameFunctions/: GameFunctions.cpp  GameFunctions.h
src/: CMakeLists.txt  game_logic.cpp  main.cpp
src/AutoWin/: AutoWin.cpp  AutoWin.h  GameStateStruct.cpp  GameStateStruct.h
src/ClassesStack/: ClassesStack.cpp
src/GameFunctions/: GameFunctions.cpp  GameFunctions.h
tests/: CMakeLists.txt  game_test.cpp
tests/googletest/: CMakeLists.txt  README.md
tests/googletest/include/gtest/internal/: gtest-port.h
tests/googletest/src/: gtest-death-test.cc
tests/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test.py  googletest-death-test-test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-list-tests-unittest.py  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test.py  gtest_unittest.cc
